<resources>
    <string name="app_name">Flickr Client</string>
    <string name="bottom_menu_feed">Feed</string>
    <string name="bottom_menu_profile">Profile</string>
    <string name="bottom_menu_connection">Connection</string>
    <string name="greeting">Welcome\nto\nCloud Client</string>
    <string name="bottom_menu_search">Search</string>
    <string name="hint">Input a string</string>
    <string name="button">Send</string>
    <string name="fragment_title_search">Search Fragment</string>
    <string name="fragment_title_feed">Feed Fragment</string>
    <string name="fragment_title_profile">Profile Fragment</string>
    <string name="empty_feed">No items</string>
    <string name="button_load">Load New</string>
    <string name="msg_no_items_loaded">No items loaded.</string>
    <string name="msg_server_not_responding">Server Not Responding.</string>
    <string name="msg_no_internet_connection">No Internet Connection.</string>
    <string name="disclaimer">Никто не несёт ответственности за то,
        что Вы можете увидеть на загруженных из сети фотографиях.</string>
    <string name="button_load_from_db">Load All</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_ok_button">OK</string>
    <string name="msg_dialog_on_delete">Delete ALL items from local database?</string>
    <string name="dialog_delete_button">DELETE</string>
</resources>
