<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/feed_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/fragment_title_feed"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_load_bd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/button_load_from_db"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Button
            android:id="@+id/button_delete"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_delete_24"
            app:layout_constraintLeft_toRightOf="@id/button_load_bd" />

        <Button
            android:id="@+id/button_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_load"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="@id/title" />

        <TextView
            android:id="@+id/status_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/button_load" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/status_bar" />

    <TextView
        android:id="@+id/empty_feed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/empty_feed"
        android:textSize="18sp"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/feed_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/status_bar"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>